@@ -2,6 +2,11 @@
 Version 1.0.2, Aug 3, 2006
 -------------------------------
 
+XML:   Resolved issue CASTOR-1483 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
+       Fixed NullPointerException at generation of mapping.
+       Details: http://jira.codehaus.org/browse/CASTOR-1483
+       (Ralf - 20060801)
+
 XML:   Fixed bug CASTOR-1482 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem related to MapItem class and namespaces
        Details: http://jira.codehaus.org/browse/CASTOR-1482
